--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,6 +34,8 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
+        git config --global user.email "botdeep@email.id"
+        git config --global user.name "Bot Rajdeep"
         git add .
         git commit -m "automated deploy"
         git push
